--- a/.github/workflows/publish_doxygen.yml
+++ b/.github/workflows/publish_doxygen.yml
@@ -19,13 +19,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Create clean gh-pages branch
-        run:  git checkout -b gh-pages
       
       - name: Publish Doxygen
         uses: mattnotmitt/doxygen-action@v1.9.2
-      
+        
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
       
       
       
