--- a/.github/workflows/publish_doxygen.yml
+++ b/.github/workflows/publish_doxygen.yml
@@ -4,8 +4,8 @@ name: publish_doxygen
 
 # Controls when the workflow will run
 on:
-  # workflow_dispatch:
-  repository_dispatch:
+  workflow_dispatch:
+  # repository_dispatch:
   push:
     branches:
       - master
