--- a/.github/workflows/publish_doxygen.yml
+++ b/.github/workflows/publish_doxygen.yml
@@ -24,4 +24,9 @@ jobs:
           publish_dir: ./
       
       - name: Move
-        run: mv /html/*(D) /
+        run: |
+          shopt -s extglob
+          mv /html/*(D) /
+
+
+
