--- a/.github/workflows/publish_doxygen.yml
+++ b/.github/workflows/publish_doxygen.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Move
         run: |
           shopt -s extglob
+          ls -a
+          pwd
           mv '/html/*' /
 
 
