--- a/.github/workflows/publish_doxygen.yml
+++ b/.github/workflows/publish_doxygen.yml
@@ -26,9 +26,7 @@ jobs:
       - name: Move
         run: |
           shopt -s extglob
-          ls -a
-          pwd
-          mv './html/*' .
+          mv 'html/*' .
 
 
 
