--- a/.github/workflows/publish_doxygen.yml
+++ b/.github/workflows/publish_doxygen.yml
@@ -26,7 +26,11 @@ jobs:
       - name: Move
         run: |
           shopt -s extglob
-          mv 'html/*' .
+          stat 'html'
+          stat 'html/*'
+          stat '/home/runner/work/multidimensional-sudoku/multidimensional-sudoku/html'
+          stat '/home/runner/work/multidimensional-sudoku/multidimensional-sudoku/html/*'
+          mv '/home/runner/work/multidimensional-sudoku/multidimensional-sudoku/html/*' '/home/runner/work/multidimensional-sudoku/multidimensional-sudoku'
 
 
 
