--- a/.github/workflows/publish_doxygen.yml
+++ b/.github/workflows/publish_doxygen.yml
@@ -21,12 +21,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
-      
-      - name: Move
-        run: |
-          shopt -s extglob
-          mv './html/*' '.'
+          publish_dir: ./html/
 
 
 
